[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
threadpool = "1.8.1"
anyhow = "1.0.86"
thiserror = "1.0"
enum-utils = "0.1.2"
mime_guess = "2.0.5"
log = "0.4.22"
clap = { version = "4.5.13", features = ["derive"] }
rand = "0.8.5"
base64 = "0.22.1"